--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     ]
   },
   "dependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/register": "^7.10.1",
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.7",
@@ -35,6 +39,7 @@
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
+    "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^6.0.2",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
